# stress_study_lib_EEGStudy1

./: .gitignore  11-08.pptm  1_audio_preprocess.ipynb  1_audio_preprocess_MK.ipynb  1_audio_preprocess_v2.ipynb  1xx_preprocess_data.ipynb  2_1_visualisations.R  2_2_visualisations.R  2_3_visualisations.R  HRV_block_analysis.ipynb  IBIanalysis.R  OpenSMILE_featureExtraction.ipynb  README.md  cleanAudioallDataViz.R  data_blocks_feats.parquet  df_tot_merged.parquet  functions.R  ibi_visualizations.ipynb  pyproject.toml  sex_mapping.csv  user_data_per_block.parquet  user_data_per_subblock.parquet
loc_data/: SAMsCompiled.csv  marloesFeaturesCompiled.csv
notebooks/: 1.0_ECG_processing.ipynb  1.0_OpenSMILE_featureExtraction.ipynb  1.1_OpenSMILE_featureExtraction.ipynb  1.1_OpenSMILE_visualizations.ipynb  2.0_IBI_feedback_visualizations.ipynb  2.1.1_OpenSMile_visualizations_utterance.ipynb  2.1_OpenSMILE_visualizations.ipynb
notebooks/speech_study/: audio_ptcpt_filtering.py  data_parsing.py  dataframes.py  path_conf.py  process_ecg.py
scripts/: 2_1_visualisations.R  2_2_visualisations.R  2_visualisations.R  3.0_Audio_SelfReport_analysis_visualisation.R  3.1_IBI_analysis_visualisation.R  3.2_PCA.R  IBIanalysis.R  cleanAudioallDataViz.R  functions.R  sessionInfo.txt
speech_study/: path_conf.py  process_ecg.py  process_gsr.py
