[tool.poetry]
name = "speech-study"
version = "0.1.0"
description = "code withholding the ptyhon data analysis part of the speech study"
authors = ["jonvdrdo <jonvdrdo.vanderdonckt@ugent.be>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
pandas = "^1.4.0"
numpy = "^1.22.1"
pyfunctional = "^1.4.3"
plotly-resampler = "^0.2.5"
tsflex = "^0.2.3"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
pyarrow = "^6.0.1"
opensmile = "^2.4.1"
neurokit2 = "^0.1.5"
PyWavelets = "^1.2.0"
scikit-image = "^0.19.1"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
jedi = "^0.18.1"
memory-profiler = "^0.60.0"
isort = "^5.10.1"
ipywidgets = "^7.6.5"
jedi-language-server = "^0.35.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"